# broadlink-code-generator

./: .env.example  AGENTS.md  README.md  main.py  pyproject.toml
captures/: 9999.json  Toshiba-JP.txt  Toshiba-JP_RAS‒G221M.txt  Toshiba_RAS-K281X.txt  cool_25_auto.txt  generated_smartir.json  heat_25_auto.txt
src/boardlink_local/: __init__.py  capture.py  decoder.py  device.py  protocol.py  smartir.py
tools/: capture.py  capture_missing.py  generate_smartir.py  send_code.py  test_generated.py
web/: index.html  server.py
