[project]
name = "boardlink-local"
version = "0.1.0"
description = "Broadlink IR capture, reverse-engineering, and SmartIR generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "broadlink>=0.19.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boardlink_local"]
